// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom entity can pause: idle 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-entity-row config="[object Object]" hass="[object Object]">
    <div class="generic-entity-row">
      <state-badge _showIcon="true" class="pointer" stateObj="[object Object]" tabindex="0">
        <ha-state-icon data-domain="sensor" data-state="idle">…</ha-state-icon>
      </state-badge>
      <div class="info pointer" title="Fancy timer">
        Fancy timer
      </div>
      <div class="pointer text-content value">
        Idle
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;

exports[`Custom entity can pause: paused 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-entity-row config="[object Object]" hass="[object Object]">
    <div class="generic-entity-row">
      <state-badge _showIcon="true" class="pointer" stateObj="[object Object]" tabindex="0">
        <ha-state-icon data-domain="sensor" data-state="paused">…</ha-state-icon>
      </state-badge>
      <div class="info pointer" title="Fancy timer">
        Fancy timer
      </div>
      <div class="pointer status">
        Paused
      </div>
      <div class="pointer text-content value">
        59
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;

exports[`Custom entity can pause: running 1`] = `
"<timer-bar-card hass="[object Object]">
  <timer-bar-entity-row config="[object Object]" hass="[object Object]">
    <div class="generic-entity-row">
      <state-badge _showIcon="true" class="pointer" stateObj="[object Object]" tabindex="0">
        <ha-state-icon data-domain="sensor" data-state="active">…</ha-state-icon>
      </state-badge>
      <div class="info pointer" title="Fancy timer">
        Fancy timer
      </div>
      <div class="bar-container pointer">
        <div class="bar">
          <div></div>
        </div>
      </div>
      <div class="pointer text-content value">
        59
      </div>
    </div>
  </timer-bar-entity-row>
</timer-bar-card>
"
`;
